--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "sass": "^1.54.1",
+    "sass-loader": "^10.3.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue-template-compiler": "^2.7.8",
